<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Attendance Scanner</string>
    <string name="admin_activity_name">Attendance Admin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="initializing">Initializing…</string>
    <string name="scan">Scan</string>
    <string name="title_activity_student_name">Student Editor</string>
    <string name="action_student_names">Edit Students</string>
    <string name="action_add_student">Add Student</string>
    <string name="action_view_attendance">View Attendance</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="showing_attendance_from">Showing Attendance From:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="remove">Remove</string>
    <string name="add_student">Add Student</string>
    <string name="student_id">Student ID</string>
    <string name="remove_student_title">Remove this student?</string>
    <string name="remove_student_message">This will delete all their attendance records.</string>
    <string name="import_database">Import Database…</string>
    <string name="backup_database">Backup Database</string>
    <string name="password_dialog_title">Enter Admin Password</string>
    <string name="password_dialog_message">These functions are reserved for club administrators.</string>
    <string name="password_incorrect">Incorrect password!</string>
    <string name="name">Name</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="total_time">Total Time</string>
    <string name="autoscan_label">Scanner</string>
    <string name="manual_input">Manual Input</string>
    <string name="manual_enter_student_id_message">Enter the Student ID of the student to check in or out.</string>
    <string name="manual_enter_student_id_title">Manual Input</string>
    <string name="totals_from_labels">Totals from:</string>
    <string name="to_label">to</string>
    <string name="view_totals_label">View Total Times</string>
    <string name="title_activity_totals">Total Attendance</string>
    <string name="clear_database">Clear Database</string>
    <string name="areyousure">Are you sure?</string>
    <string name="areyoureallysure">Are you REALLY sure?</string>
    <string name="delete_all_records">This will delete all attendance records!</string>
    <string name="might_want_this_someday">You might want these records someday!</string>
    <string name="exportcsv">Export to CSV</string>
    <string name="exporting_records">Exporting Records</string>
    <string name="enable_autofocus">Enable Autofocus</string>
    <string name="disable_autofocus">Disable Autofocus</string>
    <string name="admin_interface">Admin Interface</string>
    <string name="waiting_for_scan">Waiting for scan....</string>
    <string name="screen_on_warning">NOTE: device must be unlocked and on this screen for scans to be processed</string>
    <string name="disable_usb_scanner">Disable USB Scanner</string>
    <string name="select_export_type">Select Export Type</string>
    <string name="label_reports">Reports</string>
    <string name="label_database">Database</string>
    <string name="label_admin">Administration</string>
    <string name="change_password">Change Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="no_password">No Password</string>
    <string name="merge_database">Merge Database</string>
    <string name="old_password_hint">Old Password</string>
    <string name="menu_view_totals">Leaderboards</string>
    <string name="label_backdate">Backdate</string>

    <string-array name="csv_export_options">
        <item>Total Times</item>
        <item>In/Out Times</item>
    </string-array>
</resources>
