<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_reports"
        android:paddingTop="10dp"
        android:paddingBottom="3dp"
        android:paddingLeft="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_view_attendance"
            android:id="@+id/viewAttendanceButton"
            android:drawableLeft="@android:drawable/ic_menu_agenda"
            android:onClick="viewAttendance"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_totals_label"
            android:id="@+id/viewTotalsButton"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:onClick="viewTotalTimes"
            android:layout_below="@+id/viewAttendanceButton"
            android:layout_alignParentLeft="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exportcsv"
            android:id="@+id/exportCSVButton"
            android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
            android:onClick="exportToCSV"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_student_names"
            android:id="@+id/studentNamesButton"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:onClick="editStudentNames"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/exportCSVButton"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_admin"
        android:paddingTop="10dp"
        android:paddingBottom="3dp"
        android:paddingLeft="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_input"
            android:id="@+id/manualInputButton"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:onClick="manualInput"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:id="@+id/changePasswordButton"
            android:drawableLeft="@android:drawable/ic_menu_sort_alphabetically"
            android:onClick="showChangePasswordDialog"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_database"
        android:paddingTop="10dp"
        android:paddingBottom="3dp"
        android:paddingLeft="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_database"
            android:id="@+id/exportDatabaseButton"
            android:drawableLeft="@android:drawable/ic_menu_set_as"
            android:onClick="backupDatabase"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_database"
            android:id="@+id/importDatabaseButton"
            android:drawableLeft="@android:drawable/ic_menu_add"
            android:onClick="importDatabase"
            android:layout_below="@+id/exportDatabaseButton"
            android:layout_alignParentLeft="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_database"
            android:id="@+id/clearDatabaseButton"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:onClick="clearDatabase"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/exportDatabaseButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merge_database"
            android:id="@+id/mergeDatabaseButton"
            android:drawableLeft="@android:drawable/ic_menu_more"
            android:onClick="mergeDatabase"
            android:layout_below="@+id/clearDatabaseButton"
            android:layout_toRightOf="@+id/importDatabaseButton"/>

    </RelativeLayout>

</LinearLayout>
