<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_student_names"
          android:title="@string/action_student_names"
          android:showAsAction="always"
          android:icon="@android:drawable/ic_menu_my_calendar"/>

    <item android:id="@+id/action_view_attendance"
          android:title="@string/action_view_attendance"
          android:showAsAction="always"
          android:icon="@android:drawable/ic_menu_today"/>

    <item android:id="@+id/action_import_database"
          android:title="@string/import_database"
          />

    <item android:id="@+id/action_export_database"
          android:title="@string/export_database"
        />

</menu>
