<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".AttendanceActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/showing_attendance_from"
            android:id="@+id/showingAttendanceFromText"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xx/xx/xxxx"
            android:id="@+id/selectDateButton"
            android:onClick="selectDateCallback"
            />
    </LinearLayout>
    <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="8pt"
            android:layout_weight=".8"
            android:layout_margin="15dp"
            android:id="@+id/nameTextView"
            />

        <View
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="#c0c0c0"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_in"
            android:textSize="8pt"
            android:layout_weight=".5"
            android:padding="1dp"
            android:id="@+id/timeInTextView"
            android:gravity="center"/>
        <View
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="#c0c0c0"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_out"
            android:textSize="8pt"
            android:layout_weight=".5"
            android:padding="1dp"
            android:id="@+id/timeOutTextView"
            android:gravity="center"/>

    </LinearLayout>
    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#c0c0c0"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/attendanceList"/>
</LinearLayout>
